# ecs-space-invaders

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/common/: CMakeLists.txt  game_window.cpp  game_window.h  logger.h  texture_bank.cpp  texture_bank.h  utils.cpp  utils.h
src/components/: CMakeLists.txt  basic.cpp  basic.h  render.cpp  render.h
src/ents/: CMakeLists.txt  space_invaders.cpp  space_invaders.h
src/scenes/: CMakeLists.txt  i_scene.h  space_invaders.cpp  space_invaders.h
src/systems/: CMakeLists.txt  basic.cpp  basic.h  render.cpp  render.h
